borsh/tests/roundtrip/snapshots/tests__roundtrip__test_hash_map__2_element_generic_hashset.snap
---
source: borsh/tests/roundtrip/test_hash_map.rs
expression: data
---
[
    2,
    0,
    0,
    0,
    9,
    0,
    0,
    0,
    100,
    105,
    102,
    102,
    101,
    114,
    101,
    110,
    116,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
]
