borsh/tests/roundtrip/snapshots/tests__roundtrip__test_hash_map__empty_hashset.snap
---
source: borsh/tests/roundtrip/test_hash_map.rs
expression: data
---
[
    0,
    0,
    0,
    0,
]
